--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,8 +1,8 @@
-$primary: #ff6875;
+$primary: hsl(197, 100%, 70%);
 
-$text-color: #8575b4;
-$title-color: rgb(186, 173, 224);
+$text-color: hsl(255 - 50, 30%, 58%);
+$title-color: hsl(255 - 50, 45%, 78%);
 
-$background: #2c263d;
-$background-dark: #231f30;
-$background-light: #38314c;
+$background: hsl(256 - 50, 23%, 19%);
+$background-dark: hsl(254 - 50, 22%, 15%);
+$background-light: hsl(256 - 50, 22%, 25%);
